@@ -3,7 +3,7 @@
 use 5.006;
 use strict;
 use warnings;
-use Test::More tests => 2;
+use Test::More tests => 3;
 use LWP::Online ':skip_all';
 use Github::Fork::Parent;
 
@@ -14,5 +14,7 @@ is(github_parent('git://github.com/chorny/cgi-session.git'),
 is(github_parent('git@github.com:chorny/PPI-App-ppi_version-BDFOY.git'),
  'http://github.com/briandfoy/PPI-App-ppi_version-BDFOY');
 #git://github.com/briandfoy/PPI-App-ppi_version-BDFOY.git
+is(github_parent_author('git@github.com:chorny/PPI-App-ppi_version-BDFOY.git'),
+ 'briandfoy');
 
-# (c) Alexandr Ciornii, 2009
+# (c) Alexandr Ciornii, 2009-2010
