@@ -4,7 +4,7 @@ use 5.006;
 use strict;
 use warnings;
 use lib 'lib';
-use Test::More tests => 2;
+use Test::More tests => 3;
 use Github::Fork::Parent;
 
 is(github_parent('git://github.com/chorny/cgi-session.git'),
@@ -12,10 +12,11 @@ is(github_parent('git://github.com/chorny/cgi-session.git'),
 #print github_parent('git://github.com/chorny/cgi-session.git'),"\n";
 #git://github.com/cromedome/cgi-session.git
 
-is(github_parent('git@github.com:chorny/PPI-App-ppi_version-BDFOY.git'),
- 'http://github.com/briandfoy/PPI-App-ppi_version-BDFOY');
-#print github_parent('git@github.com:chorny/PPI-App-ppi_version-BDFOY.git'),"\n";
+is(github_parent('git@github.com:chorny/test-more.git'),
+ 'http://github.com/schwern/test-more');
 #git://github.com/briandfoy/PPI-App-ppi_version-BDFOY.git
+is(github_parent_author('git@github.com:chorny/test-more.git'),
+ 'schwern');
 
 
 # (c) Alexandr Ciornii, 2009
