@@ -1,5 +1,7 @@
 Revision history for Github-Fork-Parent
 
+        Add 'github_parent_author'
+
 0.01    2009-11-08
         First version.
 
